; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_send.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_iovec = type { i64, i8* }
%struct.nn_msghdr = type { i32, i64, i32*, %struct.nn_iovec* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nn_send(i32 %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.nn_iovec, align 8
  %10 = alloca %struct.nn_msghdr, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = getelementptr inbounds %struct.nn_iovec, %struct.nn_iovec* %9, i32 0, i32 1
  store i8* %11, i8** %12, align 8
  %13 = load i64, i64* %7, align 8
  %14 = getelementptr inbounds %struct.nn_iovec, %struct.nn_iovec* %9, i32 0, i32 0
  store i64 %13, i64* %14, align 8
  %15 = getelementptr inbounds %struct.nn_msghdr, %struct.nn_msghdr* %10, i32 0, i32 3
  store %struct.nn_iovec* %9, %struct.nn_iovec** %15, align 8
  %16 = getelementptr inbounds %struct.nn_msghdr, %struct.nn_msghdr* %10, i32 0, i32 0
  store i32 1, i32* %16, align 8
  %17 = getelementptr inbounds %struct.nn_msghdr, %struct.nn_msghdr* %10, i32 0, i32 2
  store i32* null, i32** %17, align 8
  %18 = getelementptr inbounds %struct.nn_msghdr, %struct.nn_msghdr* %10, i32 0, i32 1
  store i64 0, i64* %18, align 8
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @nn_sendmsg(i32 %19, %struct.nn_msghdr* %10, i32 %20)
  ret i32 %21
}

declare dso_local i32 @nn_sendmsg(i32, %struct.nn_msghdr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
